# PRI-Tic-Tac-Toe

./: .gitignore  CMakeLists.txt  README.md  _win_com.bat  basic_input.c  basic_input.h  console.c  custom_math.c  custom_math.h  end_of_game.c  game.c  game.h  game_display.c  game_initialization.c  game_input.c  main.c  player.h  vector2.h
.github/workflows/: ci.yml
include/: basic_input.h  console.h  console_io.h  game.h  math.h  max.h  player.h  vector2.h
src/: basic_input.c  console.c  console_io.c  end_of_game.c  game.c  game_display.c  game_initialization.c  game_input.c  main.c  math.c  max.c
src/game/: checks.c  display.c  init.c  input.c  run.c
